Fixed share icon spacing

--- a/assets/sass/_components.sass
+++ b/assets/sass/_components.sass
@@ -328,6 +328,9 @@ footer.active
     margin: 0.5rem
   &_share
     display: inline-flex
+    a
+        .icon
+            margin: 0 0.5rem
   &_meta
     align-items: stretch
     &, span
